--- a/note/src/main/res/values/strings.xml
+++ b/note/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="search">Search your tasks</string>
     <string name="create">Create a task…</string>
+    <string name="delete">Delete</string>
+    <string name="complete">Complete</string>
 </resources>
